maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:38: error: turn is already defined as variable turn
  var turn:Int=0
      ^